--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Core/Maps/TopDownExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Core
+ContentBrowserTab1.SelectedPaths=/Game/Core/UI/Widgets_CampaignWidgets
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -763,12 +763,6 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon.Widget_HouseRosterIcon
-OpenAssetsAtExit=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions.DataTable_CampaignMissions
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Social/Widget_HouseRoster.Widget_HouseRoster
-OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
-OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry.Widget_TcPLeaderboardEntry
-OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard.Widget_TCPLeaderboard
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.286
@@ -815,26 +809,26 @@ User Created=False
 Common=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions
-MRUItem1=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
-MRUItem2=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
-MRUItem3=/Game/Core/Blueprints/GOTGameMode
-MRUItem4=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry
-MRUItem5=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard
-MRUItem6=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileTCPLeaderboard
-MRUItem7=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem8=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem9=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem10=/Game/Core/UI/LoadingScreen
-MRUItem11=/Game/Core/UI/ShopUI/Widget_OfferRewards
-MRUItem12=/Game/Core/UI/Widget_PlayerLevelUp
-MRUItem13=/Game/Core/Blueprints/MainPlayerController
-MRUItem14=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem15=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem16=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
-MRUItem17=/Game/Core/UI/Widgets_Login/GameSparksRegistration
-MRUItem18=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem19=/Game/Core/UI/TimerScreen
+MRUItem0=/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1
+MRUItem1=/Game/Core/MasterClassBPs/CampaignDataHolder
+MRUItem2=/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon
+MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem4=/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016
+MRUItem5=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect
+MRUItem6=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions
+MRUItem7=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
+MRUItem8=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
+MRUItem9=/Game/Core/Blueprints/GOTGameMode
+MRUItem10=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry
+MRUItem11=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard
+MRUItem12=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileTCPLeaderboard
+MRUItem13=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem14=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem15=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem16=/Game/Core/UI/LoadingScreen
+MRUItem17=/Game/Core/UI/ShopUI/Widget_OfferRewards
+MRUItem18=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem19=/Game/Core/Blueprints/MainPlayerController
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -1223,6 +1217,61 @@ Widget_HouseRoster_C.Render Transform=True
 Widget_HouseRoster_C.Clipping=True
 Widget_HouseRoster_C.Navigation=True
 Struct_CampaignMissions.None=True
+Widget_CampaignHeroSelect_C.Appearance=True
+Widget_CampaignHeroSelect_C.Designer=True
+Widget_CampaignHeroSelect_C.Input=True
+Widget_CampaignHeroSelect_C.Interaction=True
+Widget_CampaignHeroSelect_C.Performance=True
+Widget_CampaignHeroSelect_C.Layout=True
+Widget_CampaignHeroSelect_C.Behavior=True
+Widget_CampaignHeroSelect_C.Render Transform=True
+Widget_CampaignHeroSelect_C.Clipping=True
+Widget_CampaignHeroSelect_C.Navigation=True
+UniformGridPanel.Layout=True
+UniformGridPanel.Child Layout=True
+UniformGridPanel.Behavior=True
+UniformGridPanel.Render Transform=True
+UniformGridPanel.Performance=True
+UniformGridPanel.Clipping=True
+UniformGridPanel.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+Widget_CharSelectionRosterIcon_C.Default=True
+Widget_CharSelectionRosterIcon_C.Appearance=True
+Widget_CharSelectionRosterIcon_C.Designer=True
+Widget_CharSelectionRosterIcon_C.Input=True
+Widget_CharSelectionRosterIcon_C.Interaction=True
+Widget_CharSelectionRosterIcon_C.Performance=True
+Widget_CharSelectionRosterIcon_C.Layout=True
+Widget_CharSelectionRosterIcon_C.Behavior=True
+Widget_CharSelectionRosterIcon_C.Render Transform=True
+Widget_CharSelectionRosterIcon_C.Clipping=True
+Widget_CharSelectionRosterIcon_C.Navigation=True
+Widget_MainMenuRoster_C.Appearance=True
+Widget_MainMenuRoster_C.Designer=True
+Widget_MainMenuRoster_C.Input=True
+Widget_MainMenuRoster_C.Interaction=True
+Widget_MainMenuRoster_C.Performance=True
+Widget_MainMenuRoster_C.Layout=True
+Widget_MainMenuRoster_C.Behavior=True
+Widget_MainMenuRoster_C.Render Transform=True
+Widget_MainMenuRoster_C.Clipping=True
+Widget_MainMenuRoster_C.Navigation=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+CampaignDataHolder_C.Tick=True
+CampaignDataHolder_C.Rendering=True
+CampaignDataHolder_C.Replication=True
+CampaignDataHolder_C.Input=True
+CampaignDataHolder_C.Actor=True
+Widget_CampaignHeroSelect_C.Default=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1236,12 +1285,21 @@ bCanPreviewSwapAspectRatio=False
 [DetailPropertyExpansion]
 CharDataHolder_KhalDrogo_C=
 CharDataHolder_MasterClass_C=
-Image="\"Object.Appearance.Brush\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
 Object=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
+UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget=
+VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ScrollBox="\"Object.Style.WidgetStyle.TopShadowBrush\" \"Object.Style.WidgetStyle.TopShadowBrush.Margin\" \"Object.Style.WidgetStyle.TopShadowBrush.TintColor\" \"Object.Style.WidgetStyle.BottomShadowBrush\" \"Object.Style.WidgetStyle.BottomShadowBrush.Margin\" \"Object.Style.WidgetStyle.BottomShadowBrush.TintColor\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetStyle.LeftShadowBrush.Margin\" \"Object.Style.WidgetStyle.LeftShadowBrush.TintColor\" \"Object.Style.WidgetStyle.RightShadowBrush\" \"Object.Style.WidgetStyle.RightShadowBrush.Margin\" \"Object.Style.WidgetStyle.RightShadowBrush.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.NormalThumbImage\" \"Object.Style.WidgetBarStyle.NormalThumbImage.Margin\" \"Object.Style.WidgetBarStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.HoveredThumbImage\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.Margin\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.DraggedThumbImage\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.Margin\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget_CampaignHeroSelect_C=
+UserWidget=
+Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass=1
@@ -1263,6 +1321,12 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 /Game/Core/UI/Widgets_Social/Widget_HouseMenu.Widget_HouseMenu=1
 /Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon.Widget_HouseRosterIcon=1
 /Game/Core/UI/Widgets_Social/Widget_HouseRoster.Widget_HouseRoster=1
+/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016.plus-sign-in-a-square_318-53016=1
+/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster.Widget_MainMenuRoster=1
+/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect.Widget_CampaignHeroSelect=1
+/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon.Widget_CharSelectionRosterIcon=1
+/Game/Core/MasterClassBPs/CampaignDataHolder.CampaignDataHolder=1
+/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1.Widget_Campaign1=1
 
 [MessageLog]
 LastLogListing=EditorErrors
@@ -1284,5 +1348,15 @@ bSCCUseGlobalSettings=False
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[PluginBrowser]
+InstalledPlugins=DungeonArchitect
+InstalledPlugins=MirrorAnimationSystem
+InstalledPlugins=MixamoAnimationRetargeting
+InstalledPlugins=PlayFab
+InstalledPlugins=Savior
+
+[DetailCategoriesAdvanced]
+ScrollBox.Behavior=True
 
 
