--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -762,7 +762,12 @@ TextureEditor.TimeStamp=2019.03.11-15.33.31
 TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect.Widget_CampaignHeroSelect
+OpenAssetsAtExit=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CharSelectionRosterIcon.Widget_CharSelectionRosterIcon
+OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
+OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen.Widget_PlayerProfileScreen
+OpenAssetsAtExit=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.286
@@ -809,26 +814,26 @@ User Created=False
 Common=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1
-MRUItem1=/Game/Core/MasterClassBPs/CampaignDataHolder
-MRUItem2=/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon
-MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem4=/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016
-MRUItem5=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect
-MRUItem6=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions
-MRUItem7=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
-MRUItem8=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
-MRUItem9=/Game/Core/Blueprints/GOTGameMode
-MRUItem10=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry
-MRUItem11=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard
-MRUItem12=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileTCPLeaderboard
-MRUItem13=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem14=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem15=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem16=/Game/Core/UI/LoadingScreen
-MRUItem17=/Game/Core/UI/ShopUI/Widget_OfferRewards
-MRUItem18=/Game/Core/UI/Widget_PlayerLevelUp
-MRUItem19=/Game/Core/Blueprints/MainPlayerController
+MRUItem0=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem1=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem2=/Game/Core/Blueprints/GOTGameMode
+MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon
+MRUItem4=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect
+MRUItem5=/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1
+MRUItem6=/Game/Core/MasterClassBPs/CampaignDataHolder
+MRUItem7=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem8=/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016
+MRUItem9=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions
+MRUItem10=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
+MRUItem11=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
+MRUItem12=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry
+MRUItem13=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard
+MRUItem14=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileTCPLeaderboard
+MRUItem15=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem16=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem17=/Game/Core/UI/LoadingScreen
+MRUItem18=/Game/Core/UI/ShopUI/Widget_OfferRewards
+MRUItem19=/Game/Core/UI/Widget_PlayerLevelUp
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -1272,6 +1277,7 @@ CampaignDataHolder_C.Replication=True
 CampaignDataHolder_C.Input=True
 CampaignDataHolder_C.Actor=True
 Widget_CampaignHeroSelect_C.Default=True
+K2Node_MakeStruct.PinOptions=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1289,17 +1295,18 @@ Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Render Transf
 Widget=
 Visual=
 Object=
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget=
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ScrollBox="\"Object.Style.WidgetStyle.TopShadowBrush\" \"Object.Style.WidgetStyle.TopShadowBrush.Margin\" \"Object.Style.WidgetStyle.TopShadowBrush.TintColor\" \"Object.Style.WidgetStyle.BottomShadowBrush\" \"Object.Style.WidgetStyle.BottomShadowBrush.Margin\" \"Object.Style.WidgetStyle.BottomShadowBrush.TintColor\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetStyle.LeftShadowBrush.Margin\" \"Object.Style.WidgetStyle.LeftShadowBrush.TintColor\" \"Object.Style.WidgetStyle.RightShadowBrush\" \"Object.Style.WidgetStyle.RightShadowBrush.Margin\" \"Object.Style.WidgetStyle.RightShadowBrush.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.NormalThumbImage\" \"Object.Style.WidgetBarStyle.NormalThumbImage.Margin\" \"Object.Style.WidgetBarStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.HoveredThumbImage\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.Margin\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.DraggedThumbImage\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.Margin\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+ScrollBox="\"Object.Style.WidgetStyle.TopShadowBrush\" \"Object.Style.WidgetStyle.TopShadowBrush.Margin\" \"Object.Style.WidgetStyle.TopShadowBrush.TintColor\" \"Object.Style.WidgetStyle.BottomShadowBrush\" \"Object.Style.WidgetStyle.BottomShadowBrush.Margin\" \"Object.Style.WidgetStyle.BottomShadowBrush.TintColor\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetStyle.LeftShadowBrush.Margin\" \"Object.Style.WidgetStyle.LeftShadowBrush.TintColor\" \"Object.Style.WidgetStyle.RightShadowBrush\" \"Object.Style.WidgetStyle.RightShadowBrush.Margin\" \"Object.Style.WidgetStyle.RightShadowBrush.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.NormalThumbImage\" \"Object.Style.WidgetBarStyle.NormalThumbImage.Margin\" \"Object.Style.WidgetBarStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.HoveredThumbImage\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.Margin\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.DraggedThumbImage\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.Margin\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
 Widget_CampaignHeroSelect_C=
 UserWidget=
 Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget_PlayerProfileScreen_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass=1
