--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Core/Maps/TopDownExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Core/UI/Widgets_CampaignWidgets
+ContentBrowserTab1.SelectedPaths=/Game/Core
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -762,12 +762,7 @@ TextureEditor.TimeStamp=2019.03.11-15.33.31
 TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect.Widget_CampaignHeroSelect
-OpenAssetsAtExit=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CharSelectionRosterIcon.Widget_CharSelectionRosterIcon
-OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
-OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen.Widget_PlayerProfileScreen
-OpenAssetsAtExit=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.286
@@ -1334,6 +1329,7 @@ Widget_PlayerProfileScreen_C=
 /Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon.Widget_CharSelectionRosterIcon=1
 /Game/Core/MasterClassBPs/CampaignDataHolder.CampaignDataHolder=1
 /Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1.Widget_Campaign1=1
+/Game/Core/UI/Widgets_CampaignWidgets/Widget_CharSelectionRosterIcon.Widget_CharSelectionRosterIcon=1
 
 [MessageLog]
 LastLogListing=EditorErrors
