--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -763,6 +763,10 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_DarrioNaharis.CharDataHolder_DarrioNaharis
+OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen.Widget_MainMenu_CharScreen
+OpenAssetsAtExit=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.286
@@ -810,25 +814,25 @@ Common=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem1=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem1=/Game/Core/DataHolderBps/Character/CharDataHolder_DarrioNaharis
 MRUItem2=/Game/Core/Blueprints/GOTGameMode
-MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon
-MRUItem4=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect
-MRUItem5=/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1
-MRUItem6=/Game/Core/MasterClassBPs/CampaignDataHolder
-MRUItem7=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem8=/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016
-MRUItem9=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions
-MRUItem10=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
-MRUItem11=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
-MRUItem12=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry
-MRUItem13=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard
-MRUItem14=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileTCPLeaderboard
-MRUItem15=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem16=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem17=/Game/Core/UI/LoadingScreen
-MRUItem18=/Game/Core/UI/ShopUI/Widget_OfferRewards
-MRUItem19=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem4=/Game/Core/UI/Widgets_Login/GameSparksRegistration
+MRUItem5=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem6=/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon
+MRUItem7=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect
+MRUItem8=/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1
+MRUItem9=/Game/Core/MasterClassBPs/CampaignDataHolder
+MRUItem10=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem11=/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016
+MRUItem12=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions
+MRUItem13=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
+MRUItem14=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
+MRUItem15=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry
+MRUItem16=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard
+MRUItem17=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileTCPLeaderboard
+MRUItem18=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem19=/Game/Core/UI/Widgets_Login/GameSparksLogin
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -1273,6 +1277,15 @@ CampaignDataHolder_C.Input=True
 CampaignDataHolder_C.Actor=True
 Widget_CampaignHeroSelect_C.Default=True
 K2Node_MakeStruct.PinOptions=True
+CharDataHolder_DarrioNaharis_C.Default=True
+CharDataHolder_DarrioNaharis_C.Tick=True
+CharDataHolder_DarrioNaharis_C.StatVars=True
+CharDataHolder_DarrioNaharis_C.References=True
+CharDataHolder_DarrioNaharis_C.Static Variables=True
+CharDataHolder_DarrioNaharis_C.Rendering=True
+CharDataHolder_DarrioNaharis_C.Replication=True
+CharDataHolder_DarrioNaharis_C.Input=True
+CharDataHolder_DarrioNaharis_C.Actor=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
