--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Core/Maps/TopDownExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Core
+ContentBrowserTab1.SelectedPaths=/Game/Movies
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -763,10 +763,12 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_DarrioNaharis.CharDataHolder_DarrioNaharis
+OpenAssetsAtExit=/Game/Core/UI/SplashScreen.SplashScreen
+OpenAssetsAtExit=/Game/Movies/MediaPlayer_Video.MediaPlayer_Video
 OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen.Widget_MainMenu_CharScreen
-OpenAssetsAtExit=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass
+OpenAssetsAtExit=/Game/Movies/UnrealFireSplash.UnrealFireSplash
+OpenAssetsAtExit=/Game/Movies/MediaPlayer.MediaPlayer
+OpenAssetsAtExit=/Game/Movies/Playlist.Playlist
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.286
@@ -813,26 +815,26 @@ User Created=False
 Common=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem1=/Game/Core/DataHolderBps/Character/CharDataHolder_DarrioNaharis
-MRUItem2=/Game/Core/Blueprints/GOTGameMode
-MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem4=/Game/Core/UI/Widgets_Login/GameSparksRegistration
-MRUItem5=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem6=/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon
-MRUItem7=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect
-MRUItem8=/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1
-MRUItem9=/Game/Core/MasterClassBPs/CampaignDataHolder
-MRUItem10=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
-MRUItem11=/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016
-MRUItem12=/Game/Core/DataBPs/CampaignData/DataTable_CampaignMissions
-MRUItem13=/Game/Core/UI/Widgets_Social/Widget_HouseRosterIcon
-MRUItem14=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
-MRUItem15=/Game/Core/UI/Widgets_MainMenu/Widget_TcPLeaderboardEntry
-MRUItem16=/Game/Core/UI/Widgets_MainMenu/Widget_TCPLeaderboard
-MRUItem17=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileTCPLeaderboard
-MRUItem18=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem19=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem0=/Game/Movies/Playlist
+MRUItem1=/Game/Movies/MediaPlayer
+MRUItem2=/Game/Movies/UnrealFireSplash
+MRUItem3=/Game/Core/Blueprints/GOTGameMode
+MRUItem4=/Game/Core/UI/SplashScreen
+MRUItem5=/Game/Movies/MediaPlayer_Video
+MRUItem6=/Game/Movies/ArchlichIntroVideo1080
+MRUItem7=/Game/Core/UI/UI_Images/BrandingImages/Unreal_Engine_Horiz_White
+MRUItem8=/Game/Core/UI/UI_Images/BrandingImages/Unreal_Engine_Horiz_Black
+MRUItem9=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem10=/Game/Core/DataHolderBps/Character/CharDataHolder_DarrioNaharis
+MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem12=/Game/Core/UI/Widgets_Login/GameSparksRegistration
+MRUItem13=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem14=/Game/Core/UI/Widgets_Roster/Widget_CharSelectionRosterIcon
+MRUItem15=/Game/Core/UI/Widgets_CampaignWidgets/Widget_CampaignHeroSelect
+MRUItem16=/Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1
+MRUItem17=/Game/Core/MasterClassBPs/CampaignDataHolder
+MRUItem18=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster
+MRUItem19=/Game/Core/UI/UI_Images/plus-sign-in-a-square_318-53016
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -1286,6 +1288,48 @@ CharDataHolder_DarrioNaharis_C.Rendering=True
 CharDataHolder_DarrioNaharis_C.Replication=True
 CharDataHolder_DarrioNaharis_C.Input=True
 CharDataHolder_DarrioNaharis_C.Actor=True
+MediaPlayer.Playback=True
+MediaPlayer.ViewSettings=True
+SplashScreen_C.Appearance=True
+SplashScreen_C.Designer=True
+SplashScreen_C.Input=True
+SplashScreen_C.Interaction=True
+SplashScreen_C.Performance=True
+SplashScreen_C.Layout=True
+SplashScreen_C.Behavior=True
+SplashScreen_C.Render Transform=True
+SplashScreen_C.Clipping=True
+SplashScreen_C.Navigation=True
+K2Node_VariableSet.Events=True
+MediaTexture.MediaTexture=True
+MediaTexture.Media=True
+MediaTexture.File Path=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+SplashScreen_C.Default=True
+MediaSoundComponent.Variable=True
+MediaSoundComponent.TransformCommon=True
+MediaSoundComponent.Sockets=True
+MediaSoundComponent.Media=True
+MediaSoundComponent.AttenuationDistance=True
+MediaSoundComponent.Attenuation=True
+MediaSoundComponent.AttenuationSpatialization=True
+MediaSoundComponent.Effects=True
+MediaSoundComponent.AttenuationAirAbsorption=True
+MediaSoundComponent.AttenuationListenerFocus=True
+MediaSoundComponent.Concurrency=True
+MediaSoundComponent.AttenuationOcclusion=True
+MediaSoundComponent.SoundClass=True
+MediaSoundComponent.Sound=True
+MediaSoundComponent.Tags=True
+MediaSoundComponent.ComponentReplication=True
+MediaSoundComponent.Activation=True
+MediaSoundComponent.Cooking=True
+MediaSoundComponent.Events=True
+MediaSoundComponent.Collision=True
+MediaSoundComponent.AssetUserData=True
+MediaPlaylist.Playlist=True
+MediaPlayer.Editor=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1302,7 +1346,7 @@ CharDataHolder_MasterClass_C=
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.Playlist.Items\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1315,6 +1359,9 @@ Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget_PlayerProfileScreen_C=
+CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+SplashScreen_C=
+MediaPlaylist="\"Object.Playlist.Items\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass=1
@@ -1343,6 +1390,11 @@ Widget_PlayerProfileScreen_C=
 /Game/Core/MasterClassBPs/CampaignDataHolder.CampaignDataHolder=1
 /Game/Core/UI/Widgets_CampaignWidgets/Widget_Campaign1.Widget_Campaign1=1
 /Game/Core/UI/Widgets_CampaignWidgets/Widget_CharSelectionRosterIcon.Widget_CharSelectionRosterIcon=1
+/Game/Core/UI/SplashScreen.SplashScreen=1
+/Game/Movies/MediaPlayer.MediaPlayer=1
+/Game/Movies/ArchlichIntroVideo1080.ArchlichIntroVideo1080=1
+/Game/Movies/UnrealFireSplash.UnrealFireSplash=1
+/Game/Movies/MediaPlayer_Video.MediaPlayer_Video=1
 
 [MessageLog]
 LastLogListing=EditorErrors
